--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.8.1
-Django==4.2.19
-sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2025.1
+Django==4.2.18
+sqlparse==0.5.2
+gunicorn==23.0.0
+psycopg2-binary==2.9.10
