--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+annotated-types==0.7.0
 asgiref==3.8.1
-Django==4.2.20
-sqlparse==0.5.2
-gunicorn==23.0.0
-psycopg2-binary==2.9.10
-django-bootstrap5==25.1
+beautifulsoup4==4.13.3
+Django==4.2.18
 django-bootstrap-datepicker-plus==5.0.5
+django-bootstrap4==25.1
+django-bootstrap5==25.1
+gunicorn==23.0.0
+packaging==24.2
+psycopg2-binary==2.9.10
+pydantic==2.10.6
+pydantic_core==2.27.2
+soupsieve==2.6
+sqlparse==0.5.2
+typing_extensions==4.12.2
+tzdata==2025.1
